// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox ovverides internal state with prop 1`] = `
<Search
  addonBefore={<Connect(SearchScopeSelect) />}
  autoFocus={true}
  data-test-id="search-box-input"
  enterButton={true}
  onChange={[Function]}
  onSearch={[Function]}
  placeholder={null}
  size="large"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  value="prop"
/>
`;

exports[`SearchBox render initial state with all props set 1`] = `
<Search
  addonBefore={<Connect(SearchScopeSelect) />}
  autoFocus={true}
  data-test-id="search-box-input"
  enterButton={true}
  onChange={[Function]}
  onSearch={[Function]}
  placeholder="placeholder"
  size="large"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  value="value"
/>
`;

exports[`SearchBox renders new value on change 1`] = `
<Search
  addonBefore={<Connect(SearchScopeSelect) />}
  autoFocus={true}
  data-test-id="search-box-input"
  enterButton={true}
  onChange={[Function]}
  onSearch={[Function]}
  placeholder={null}
  size="large"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  value="new"
/>
`;
